--- a/static/stat566/qe_applied_stat_inclass.Rmd
+++ b/static/stat566/qe_applied_stat_inclass.Rmd
@@ -293,14 +293,10 @@ The multiple linear regression model $y_i=\beta_0+\beta_1x_{i1}+\beta_2X_{i2}+\b
 was fit to a data set of 75 observations. The regression SS’s (SSR) were partitioned sequentially into
 the following:
 
-$SSR(X_1)=108$
-
-$SSR(X_2 | X_1)=163$
-
-$SSR(X_3 | X_1 X_2)=29$
-
-$SSR(X_4 | X_1 X_2 X_3)=41$
-
+$SSR(X_1)=108$; 
+$SSR(X_2 | X_1)=163$; 
+$SSR(X_3 | X_1 X_2)=29$; 
+$SSR(X_4 | X_1 X_2 X_3)=41$; 
 $SSR(X_5 | X_1 X_2 X_3 X_4)=26$
 
 The model $y_i=\beta_0+\beta_1x_{i1}+\beta_3X_{i3}+\beta_5X_{i5}+\varepsilon_i$ was also fit to the same data and the following ANOVA was calculated:
@@ -318,6 +314,8 @@ The model $y_i=\beta_0+\beta_1x_{i1}+\beta_3X_{i3}+\beta_5X_{i5}+\varepsilon_i$ 
 Answer the following from the above information:
 
 (a) Calculate the F-statistic for testing the hypothesis $(H_0)$ that $X_3$, $X_4$, and $X_5$ have no significant effect on the response $Y$.
+
+$H_0: X_3=X_4=X_5=0$
 
 $SSR(X_3,X_4,X_5)=SSR(X_1,X_2,X_3,X_4,X_5)-SSR(X_1,X_2,X_3,X_4,X_5)=29+41+26=96$
 
@@ -642,71 +640,56 @@ Analysis of Variance
  
 Output Statistics
 
- --- -------- --------- ----------- -------- --------
-     Dep Var  Predicted Std Error
+ --- -------- --------- ----------- -------- -------- -------- -------- --------
+     Dep Var  Predicted Std Error    95% CL           95% CL
      
- Obs distance Value     MeanPredict 95% CL   Mean
+ Obs distance Value     MeanPredict  Mean             Predict           Residual
  
  1   162.5000
  
- 2   144.0000 141.2810  4.8755      130.5501 152.0119
+ 2   144.0000 141.2810  4.8755      130.5501 152.0119 103.2332 179.3288 2.7190
  
- 3   147.5000 177.3879  8.1998      159.3402 195.4355
+ 3   147.5000 177.3879  8.1998      159.3402 195.4355 136.6668 218.1089 -29.8879
  
- 4   163.5000 159.3344  5.2769      147.7201 170.9488
+ 4   163.5000 159.3344  5.2769      147.7201 170.9488 121.0281 197.6408 4.1656
  
  5   192.0000
  
- 6   171.7500 150.3077  4.6253      140.1274 160.4880
+ 6   171.7500 150.3077  4.6253      140.1274 160.4880 112.4115 188.2039 21.4423
  
  7   162.0000
  
- 8   104.8300 114.2008  9.1584       94.0433 134.3583
+ 8   104.8300 114.2008  9.1584       94.0433 134.3583 72.5018  155.8999 -9.3708
  
- 9   105.6700 123.2276  7.4170      106.9028 139.5523
+ 9   105.6700 123.2276  7.4170      106.9028 139.5523 83.2403  163.2148 -17.5576
  
- 10  117.5800 132.2543  5.9141      119.2374 145.2712
+ 10  117.5800 132.2543  5.9141      119.2374 145.2712 93.4996  171.0089 -14.6743
  
- 11  140.2500 123.2276  7.4170      106.9028 139.5523
+ 11  140.2500 123.2276  7.4170      106.9028 139.5523 83.2403  163.2148 17.0224
  
- 12  150.1700 141.2810  4.8755      130.5501 152.0119
+ 12  150.1700 141.2810  4.8755      130.5501 152.0119 103.2332 179.3288 8.8890
  
- 13  165.1700 159.3344  5.2769      147.7201 170.9488
- ----------------------------------------------------
- 
- Output Statistics
+ 13  165.1700 159.3344  5.2769      147.7201 170.9488 121.0281 197.6408 5.8356
+ -------------------------------------------------------------------------------
 
- --- -------- -------- --------
- Obs 95% CL   Predict  Residual
- 
- 1
- 
- 2   103.2332 179.3288 2.7190
- 
- 3   136.6668 218.1089 -29.8879
- 
- 4   121.0281 197.6408 4.1656
- 
- 5
- 
- 6   112.4115 188.2039 21.4423
- 
- 7
- 
- 8   72.5018  155.8999 -9.3708
- 
- 9   83.2403  163.2148 -17.5576
- 
- 10  93.4996  171.0089 -14.6743
- 
- 11  83.2403  163.2148 17.0224
- 
- 12  103.2332 179.3288 8.8890
- 
- 13  121.0281 197.6408 5.8356
- ------------------------------ 
- 
- 
+```{r}
+x <- c(170,140,180,160,170,150,170,110,120,130,120,140,160)
+y <- c(162.50,144.00,147.50,163.50,192.00,171.75,162.00,104.83,105.67,117.58,140.25,150.17,165.17)
+bar_x <- mean(x)
+S_xx <- var(x)*(13-1)
+sum((x-mean(x))^2)
+
+hat_y <- 14.90696+0.90267*170
+
+qt(0.025,11,lower.tail = F,log.p = F)
+
+se_y_mean <- sqrt(275.06005*(1/13+(170-bar_x)^2/S_xx))
+
+se_y_new <- sqrt(275.06005*(1+1/13+(170-bar_x)^2/S_xx))
+
+
+```
+
  
 (a) Find the three residual values at x = 170.
 
