--- a/static/stat563/qe_math_stat.Rmd
+++ b/static/stat563/qe_math_stat.Rmd
@@ -1669,6 +1669,7 @@ $f(x)=5e^{-10|x|}$  pdf exist for $x>0$
 
 
 ### 2015S3A
+[5.4.4][]
 
 First,let $\Phi(.)$ and $\phi(.)$ denote the standard normal cdf and pdf respectively. Then, let $X_1,..,X_n$ denotes a random sample from a normal distribution with means $\theta$ and variance $\sigma^2$, and let $F(.)$ and $f(.)$ denote the common cdf and pdf of the r.s. respectively. Assume the sample size $n$ is odd; that is, $n=2k-1$; $k=1,2,3,..$ In this situation, the sample
 median is the $k^{th}$ order statistic, denoted by $Y_k$.
@@ -1716,9 +1717,8 @@ $F(x)=\begin{cases}0&x<0\\(\frac{x}\theta)^2& 0\le x<\theta\\1& x\ge\theta\end{c
 $L(\theta)=2^n\theta^{-2n}\prod x_i I_{(0,\theta)}(x_i)$
 $=2^n\theta^{-2n}\prod x_i I_{(-\infty,\theta)}(x_{(n)})I_{(0,\infty)}(x_{(1)})$
 
-$L(\theta)$ is maximized by making $\theta$ as small as possible
-
-$\hat\theta=X_{(n)}$ 
+$L(\theta)$ is maximized by making $\theta$ as small as possible. 
+Given $\theta\ge x$, $\hat\theta=X_{(n)}$ 
 
 (b) Find $E[\hat\theta]$.
 
@@ -1813,11 +1813,11 @@ $\theta^2(\frac{n}{n+2}-\frac{n^2}{(n+1)^2})$
 
 (d) (5 pts) Assuming $Y_n$ is a complete sufficient statistic for $\theta$, find the UMVUE of $\theta$. [6.2.23]
 
-$E[\frac{n+1}{n}Y_n]=$
+$E[\frac{n+1}{n}Y_n]=\theta$
 
 (e) (5 pts) Assuming $Y_n$ is a complete sufficient statistic for $\theta$, find the UMVUE of $\theta^2$.
 
-$E[\frac{n+1}{n}Y_n^2]=\theta^2$
+$E[\frac{n+12}{n}Y_n^2]=\theta^2$
 
 ### 2015F2
 [2003F8][] [2014SA2][] [2017FA3][]  [Expo](#Expo) [Basu](#Basu)
@@ -1894,65 +1894,73 @@ $Beta(\theta,\theta)$
 
 (b) (5 pts) Compute the power of the test at $\theta=2$.
 
-$\alpha=P_{\theta_01}(x_1<2/3)=1-\int_0^{2/3}=2/3$
+$\alpha=P_{\theta_0}(x_1<2/3)=\int_0^{2/3}f(x|\theta_0)=2/3$
 
-power$=1-P_{\theta_1}(x_1<2/3)=1-\int_0^{2/3}=7/27$
+power$=1-P_{\theta_1}(x_1<2/3)=1-\int_0^{2/3}f(x|\theta_1)=7/27$
 
 ### 2015F5
 [2004F12][] [2010SB4][] [2010FB4][] [2011S6][] [2018S4B][] [Expo](#Expo) [LRT](#LRT) [HypoT](#HypoT) [9.E.4]
 
 Let $X_1,X_2,..,X_{m}$ be a random sample from the exponential distribution with mean $\theta_1$ and let $Y_1,Y_2,..,Y_{n}$ be an independent random sample from another exponential distribution with mean $\theta_2$. Find the likelihood ratio test for testing $H0:\theta_1=\theta_2$ vs $H_a:\theta_1\neq\theta_2$
 
-LRT $==\frac{\bar x^m}{\theta_2^n}e^{-n(\bar y/\theta_2+1)}$
+$L(\theta_1,\theta_2)=\theta_1^{-m}\theta_2^{-n}e^{-\sum x_i/\theta_1}e^{-\sum y_j/\theta_2}$;
+$l(\theta_1,\theta_2)=-m\ln\theta_1-n\ln\theta_2-\sum x_i/\theta_1-\sum y_j/\theta_2$
+
+When $\theta_1=\theta_2$,$\hat\theta_{MLE}=\frac{\sum x_i+\sum y_i}{m+n}$;
+
+When $\theta_1\neq\theta_2$,$\hat\theta_{1}=\frac{\sum x_i}{m}$, $\hat\theta_{2}=\frac{\sum y_i}{n}$
+
+$\Lambda=\frac{\sup\limits_{\theta_1=\theta_2}L(\theta_1,\theta_2)}{\sup\limits_{\theta_1\neq\theta_2}L(\theta_1,\theta_2)}=$
 
 Let $T=\frac{\sum x_i}{\sum x_i+\sum y_i}$
 
-$\Lambda=\frac{(m+n)^{m+n}}{m^mn^n}T^m(1-T)^n\sim Beta(m+1,n+1)$
+$\Lambda=\frac{(m+n)^{m+n}}{m^mn^n}T^m(1-T)^n\le C$
+$\propto\frac{\Gamma(m+n+2)}{\Gamma{(m+1)}\Gamma{(n+1)}}T^{m+1-1}(1-T)^{n+1-1}\le C'\sim Beta(m+1,n+1)$
 
-$\hat\theta_{MLE}=\frac{\sum x_i+\sum y_i}{m+n}$;
-$\hat\theta_{1}=\frac{\sum x_i}{m}$;
-$\hat\theta_{2}=\frac{\sum y_i}{n}$
+T is the LRT for testing.
+
 ## 2016S
 
 Crain, Kim
 
 ### 2016S1
-[UMVUE][7.3.2] [Pois]
+[7.3.3][] [Lehm-Sche](#Lehm-Sche) [Pois]
 
 Let $X_1,X_2,..,X_n$ be iid (independent, identically distributed) Poisson random variables with parameter $\lambda>0$.
 
 (a) Find a complete sufficient statistic for $\lambda$.
 
-$T=\sum x_i\sim Pois(n\lambda)$, $\bar X$
+$T=\sum x_i\sim Pois(n\lambda)$, $E[T/n]=\bar X=\lambda$ $T/n$ is an unbiased estimater of $\lambda$.
+
+$\frac{\prod f(x|\lambda)}{g(t)}=\frac{n^{-t}t!}{\prod(x_i!)}$ is free of $\lambda$, T is sufficient stat
+
+$E[g(t)]=\sum g(t)\frac{(n\lambda)^te^{-n\lambda}}{t!}$. $\forall\lambda$ iff $g(t)=0$, $E[g(t)]=0$, T is complete sufficient stat.
 
 (b) Find the MVUE (Minimum Variance Unbiased Estimator) of $\lambda$.
 
- $\bar X$
+ $\bar X$ is a function of T, whcih is compl/suffi,  $\bar X$ is MVUE of $\lambda$.
 
 (c) Find the MVUE of $\lambda^2$:
 
- $\bar X^2-\bar X$
+ $E[T^2-T]=VT+ET^2-ET=n^2\lambda^2$, $\frac{T^2-T}{n^2}$ is MVUE of $\lambda^2$
 
 (d) Find the MVUE of $e^{-\lambda}$.
 
-Let $T(x_i)=\begin{cases}1&X_1=0\\0&X_1\neq0\end{cases}$
+Let $\delta(x_i)=\begin{cases}1&X_1=0\\0&X_1\neq0\end{cases}$, 
+$E(\delta|t)=\frac{P(x_i=0)P(\sum_{i=2}^n x_i=t)}{P(\sum_{i=1}^n x_i=t)}=(\frac{n-1}{n})^t \sim Bino(t,1/n),x=0$
 
-$E(T|y)=\frac{P(x_i=0)P(\sum x_i=y)}{P(\sum x_i=y)}=(\frac{n-1}{n})^y$
+(e) Find the MVUE of $P(X_i=1)=\lambda^1e^{-\lambda}/1!$
 
-(e) Find the MVUE of $P(X_i=1)=\lambda^1e^{-\lambda}/1!$: [Lehm-Sche](#Lehm-Sche)
-
-$X_1=1$
-
-$E(T|y)=\frac{P(x_i=1)P(\sum x_i=y-1)}{P(\sum x_i=y)} \sim Bino(y,1/n)$
+Let $\delta(x_i)=\begin{cases}1&X_1=1\\0&X_1\neq1\end{cases}$, 
+$E(\delta|t)=\frac{P(x_i=1)P(\sum_{i=2}^n x_i=t-1)}{P(\sum_{i=1}^n x_i=t)}=\frac{t(n-1)^{t-1}}{n^t} \sim Bino(t,1/n),x=1$
 
 (f) Find the MVUE of $P(X_i=k)=\lambda^ke^{-\lambda}/k!$:
 
- $X_1=k$
-
-$E(T|y)=\frac{P(x_i=k)P(\sum x_i=y-k)}{P(\sum x_i=y)} \sim Bino(y,1/n)$
+Let $\delta(x_i)=\begin{cases}1&X_1=k\\0&X_1\neq k\end{cases}$, 
+$E(\delta|t)=\frac{P(x_i=1)P(\sum_{i=2}^n x_i=t-k)}{P(\sum_{i=1}^n x_i=t)}=\frac{t!}{k!(n-k)!}\frac{(n-1)^{t-k}}{n^t} \sim Bino(t,1/n),x=k$
 
 ### 2016S2
-[2017FB1][] [Binomial MLE]
+[2017FB1][] [6.2.1][] [Factorization](#Fact) [Bino]
 
 Let $Y$ be $Binomial(n,p)$, with $n$ known and $p$ unknown. Among functions $u(Y)$ of $Y$,
 
@@ -1981,15 +1989,13 @@ $\frac{y}n-\frac{y^2-y}{n^2-n}=\frac{Y(n-Y)}{n(n-1)}$
 
 Let $Z$ be $N(0,1)$. Let $\Phi(z)=\int_{-\infty}^z=\phi(x)dx$, where $\phi(x) = \frac1{\sqrt{2\pi}}e^{-x^2/2},-\infty<x<\infty$, where $\phi(x)$ is the standard normal pdf, and $\Phi(z)$ is the standard normal cdf.
 
-(a) Find $E[\Phi(Z)]$. =1/2
+(a) Find $E[\Phi(z)]=1/2$. $\Phi(z)\sim Unif(0,1)$
 
-$\Phi^n |_{-\infty}^{\infty}=1$
+(b) Find $E[\Phi^{2}(z)]=V[\Phi(z)]+E[\Phi(z)]^{2}=\frac1{12}+\frac14=\frac13$.
 
-(b) Find $E[\Phi^{2}(Z)]$. =1/3
+(c) Find $E[n\Phi^{n-1}(z)]=\int_0^1n\Phi^{n-1}\phi(z)dz=\int_0^1n\Phi^{n-1}d\Phi(z)=\Phi^n(z) |_{0}^{1}=1$ 
 
-(c) Find $E[n\Phi^{n-1}(Z)]$.
-
-(d) Find $E[Z^4]$. =3
+(d) Find $E[Z^4]=3$.
 
 $E(Z^{2k})=\frac{(2k)!}{2^KK!}, k=1,2,..$
 
@@ -1997,7 +2003,7 @@ $Z^2\sim\chi_1^2$,$E[Z^2]=1$,$V[Z^2]=2$
 
 $E[(Z^2)^2]=V+E^2=2+1$
 
-(e) Find $E[Z^5]$ =0
+(e) Find $E[Z^5]=0$ 
 
 $E(Z^{2k+1})=0$
 
@@ -2054,32 +2060,25 @@ Fountain, Ian Dinwoodie
 Let $X_1,X_2,..,X_n$ be a random sample from a normal distribution with mean $\mu$ and variance $\sigma^2$.
 Let $S_k^2=\frac1k\sum_{i=1}^n(X_i-\bar X)^2$ be an estimator of $\sigma^2$. Find the value of $k$ that minimizes the mean squared error of the estimator. =n+1
 
-$W$, $E[W]$, $Var[W]$, $Bias$, $MSE$
+$W=S_k^2=\frac{n-1}{k}S^2$, $E[W]$, $Var[W]$, $Bias$, $MSE$
 
-$S_k^2=\frac{n-1}{k}S^2$
+$\frac{\partial MSE}{\partial k}\overset{set}=0$
 
-$\frac{\partial MSE}{\partial k}=0$
-
-$\hat\theta=S_{n+1}^2$
 
 ### 2016F2
 [Geom](#Geom) [561-me2]
 
-The moment generating function of a particular random variable is $M_X(t)=\frac{e^t}{4-3e^t}$. Find the coefficient of variation ($CV=\sigma/\mu$) of this distribution. $=\sqrt3/2$
+The moment generating function of a particular random variable is $M_X(t)=\frac{e^t}{4-3e^t}$. Find the coefficient of variation ($CV=\sigma/\mu$) of this distribution.
 
-$Geom(1/4),EX=4, VarX=12$
+$Geom(1/4)$; $EX=1/p=4$; $VarX=(1-p)/p^2=12$;
+$\sigma/\mu=\sqrt{12}/4=\sqrt3/2$ 
 
-$M'_X(t)$ 
-
-$EX=M'_X(0)=4$ 
-
-$M''_X(t)$ 
-
+$EX=M'_X(0)=4$;
 $EX^2=M''_X(0)=28$ 
 
 
 ### 2016F3
-[2008F3][] [Cheb](#Cheb)
+[2008F3][] [3.6.1][] [Cheb](#Cheb)
 
 If X is a random variable such that $E[X]=2$ and $E[X^2]=13$, determine a lower bound for the probability $P(-4<X<8)$. (Hint: Use a famous inequality.) 
 
@@ -2092,16 +2091,15 @@ $P(-4<x<8)\ge3/4$
 
 Let $Y_1$ and $Y_2$ be a random sample of size 2 from $Uniform(0,1)$. Find the cumulative distribution and probability density functions of $U=Y_1+Y_2$.
 
-$j=1$
+$j=1$; $f(u,v)=1$
+$f_U(u)=\begin{cases}\int_0^u=u &0\le u\le1\\\int_{u-1}^1=2-u&1\le u\le2\\0&o.w.\end{cases}$
 
+$F_U(1)=\frac12$, $\int_{1}^u=2u-\frac{u^2}2-\frac32$
 
-$f_u(u)=\begin{cases}\int_0^u=u &0\le u\le1\\\int_{u-1}^1=2-u&1\le u\le2\\0&o.w.\end{cases}$
-
-
-$F_u(u)=\begin{cases}\int_0^u=u^2/2&0\le u\le1\\F_U(1)+\int_{1}^u=1/2+2u-u^2/2-3/2=2u-u^2/2-1&1\le u\le2\\0&o.w.\end{cases}$
+$F_U(u)=\begin{cases}\int_0^u=\frac{u^2}2&0\le u\le1\\2u-\frac{u^2}2-1&1\le u\le2\\0&o.w.\end{cases}$
 
 ### 2016F5
-[2003S10][] [2008F6][] [Basu](#Basu) [562-me2] [Ancillary](#ancillary)
+[2003S10][] [2008F6][] [Basu](#Basu) [562-me2]
 
 Let $Y_n$ be the $n^{th}$ order statistic of a random sample of size n from the normal distribution $N(\theta,\sigma^2)$. Prove that $Y_n-\bar Y$ and $\bar Y$ are independent.
 
@@ -2111,15 +2109,12 @@ Let $Y_n$ be the $n^{th}$ order statistic of a random sample of size n from the 
 
 Suppose that $X_1,X_2,..,X_n$ i.i.d. $Exponential(\theta)$, i.e. $f(x;\theta)=\theta e^{-\theta x},x>0$. Also assume that the prior distribution of $\theta$ is $h(\theta)=\lambda e^{-\lambda\theta},\theta>0$. Find the Bayes estimator of $\theta$, assuming squared error loss.
 
-$f(\vec X|\theta)$
+$\pi(\theta|\vec x)=\frac{g(\vec x|\theta)}{m(\vec x)}=\frac{f(\vec x|\theta)h(\theta)}{\int g(\vec x|\theta)d\theta}$
 
-$\pi(\theta|\vec X)\propto f(\vec X|\theta)h(\theta)$
+$\pi(\theta|\vec x)\propto f(\vec x|\theta)h(\theta)\sim Beta(n+1,\frac{1}{\lambda+\sum x_i})$
 
-$E[\pi(\theta|\vec x)]=\alpha\beta=\frac{n+1}{\lambda+\sum x_i}$
+$\hat\theta_{Bayes}=E[\pi(\theta|\vec x)]=\alpha\beta=\frac{n+1}{\lambda+\sum x_i}$
 
-$E[\theta]=\frac{1}{\lambda}$
-
-$\hat\theta_{MLE}=\frac{1}{\bar X}$
 
 ### 2016F7
 [2003S7][] [2008F5][] [2009SB1][] [2009FB4][] [2016S4][] [2017FB4][] [2018FB2][] [2019SB4][]
@@ -2132,10 +2127,8 @@ $x^{\theta+1-1}(1-x)^{1-1}\sim Beta(\theta+1,1)$
 
 (a) Find the method of moments estimator for $\theta$. [MOM][7.2.1]
 
-$Beta(\alpha+n,\beta)$
-
-$E[X^n]=\frac{\Gamma(\alpha+n)\Gamma(\alpha+\beta)}{\Gamma(\alpha+\beta+n)\Gamma(\alpha)}$
-
+$Beta(\alpha+n,\beta)$,
+$E[X^n]=\frac{\Gamma(\alpha+n)\Gamma(\alpha+\beta)}{\Gamma(\alpha+\beta+n)\Gamma(\alpha)}$,
 $E[X^1]=\bar X=\frac{\alpha}{\alpha+\beta}=\frac{\theta+1}{\theta+2}$
 
 $\hat\theta_{MOM}=\frac{2\bar X-1}{1-\bar X}$
@@ -2146,35 +2139,33 @@ $\hat\theta=\frac{n}{-\sum\ln x}-1$
 
 (c) Determine if your MLE is unbiased.  [unbias][7.3.1]
 
-Bias$=E[\hat\theta]-\theta$
+Bias$=E[\hat\theta]-\theta\neq0$
 
 (d) Find the asymptotic variance of your MLE in part (b), as $n\to\infty$. [asymV](#asymV)
 
-$Var[\frac{n}{-\sum\ln x}-1]=\frac{n^2(\theta+1)^2}{(n-1)^2(n-2)}$
-
+$Var[\frac{n}{-\sum\ln x}-1]=n^2Var[(-\sum\ln x)^{-1}]=\frac{n^2(\theta+1)^2}{(n-1)^2(n-2)}$;
 $\lim Var[\hat\theta]=0$
 
-$\sqrt{n}[\tau(\hat\theta)-\tau(\theta)]\to n(0,\frac{[\tau'(\theta)]^2}{I(\theta)})=n(0,(\theta+1)^2)$
+$\sqrt{n}[\tau(\hat\theta)-\tau(\theta)]\to n(0,\frac{[\tau'(\theta)]^2}{I(\theta)})=n(0,(\theta+1)^2)$,
+
 
 (e) Find the Cramer-Rao lower bound on the variance of an unbiased estimator of $\theta$. [CRLB][7.3.2]
 
-$(\theta+1)^2/n$
+$Var[w]\ge(\theta+1)^2/n$
 
-(f) Identify the sufficient statistic for $\theta$. [suff][8.2.1]
+(f) Identify the sufficient statistic for $\theta$. [Suff][6.2.1]
 
-Expo family
+Expo family, joint pdf $\prod f(x|\theta)=(\theta+1)^n(\prod x_i)^\theta\cdot1$,$h(x)$ is free of $\theta$,
+$T(x)=\prod x_i$ is suff (by Factorization)
 
-$T(x)=\prod x_i$ is suff (by Neymann)
+(g) Suppose you've taken a sample of size $n=10$. Determine the UMP test of the null hypothesis $\theta=.5$ vs. the alternative $\theta>0.5$. [Neym-Pear][8.3.2]
 
-(g) Suppose you've taken a sample of size $n=10$. Determine the UMP test of the null hypothesis $\theta=.5$ vs. the alternative $\theta>0.5$.
+$\Lambda=\frac{L(\theta_0)}{L(\theta_1)}\le C$ has MLR, T suff, $(\prod x_i)^{0.5-\theta_1}\le C'$,
+$0.5-\theta_1<0$, $-\sum\ln x_i\le C''$, $P(-\sum\ln x_i\le C'')=\alpha$ is UMP.
 
-Step 1 suff; Step 2 Expo has MLR; Step 3 $T>t_0$ is UMP
+Under $H_0$, $-\sum\ln x_i\sim Gamma(10,\frac{1}{0.5+1})$, $-3\sum\ln x_i\sim Gamma(10,2)=\chi^2_{20}$, $P(-3\sum\ln x_i\ge C''')=1-\alpha=0.95$,$C'''=\chi^2_{20,0.95}=10.851$, $P(-3\sum\ln x_i\le 10.851)=0.05$
 
-$Gamma(10,\frac{1}{0.5+1})$
 
-$1-\alpha=P_{\theta_0}(T\le t_0)=\int_{-\infty}^{t_0}$
-
-$\alpha=P(T>t_0)=\int_{t_0}^{-\infty}$
 
 
 ### 2016F8
@@ -2189,15 +2180,17 @@ $\int_0^1\int_0^{y_2}c(1-y_2)dy_1dy_2=1$
 
 (b) Find the marginal density functions of $Y_1$ and $Y_2$.
 
-$f_{Y_1}(y_1)=3(y_1-1)=\int_{y_1}^1$
+$f_{Y_1}(y_1)=\int_{y_1}^1dy_2=3(y_1-1)^2$
 
-$f_{Y_2}(y_2)=6(y_2-y_2^2)=\int_0^{y_2}$
+$f_{Y_2}(y_2)=\int_0^{y_2}dy_1=6(y_2-y_2^2)$
 
-(c) Find $P(Y_1\le1/2|Y_2\le3/4)$ =25/27
+(c) Find $P(Y_1\le\frac12|Y_2\le\frac34)$ =25/27
 
-$P(Y_1\le1/2, Y_2\le3/4)=\int_0^{1/2}\int_0^{y_2}f(y_1,y_2)dy_1dy_2+\int_{1/2}^{3/4}\int_0^{1/2}f(y_1,y_2)dy_1dy_2=25/32$
+$P(Y_1\le\frac12, Y_2\le\frac34)=P(Y_1\le\frac12, Y_2\le\frac12)+P(Y_1\le\frac12, \frac12\le Y_2\le\frac34)$
 
-$P(Y_2\le3/4)=27/32$
+$=\int_0^{\frac12}\int_0^{y_2}f(y_1,y_2)dy_1dy_2+\int_{\frac12}^{\frac34}\int_0^{\frac12}f(y_1,y_2)dy_1dy_2=25/32$
+
+$P(Y_2\le3/4)=\int_{0}^{\frac34}f_{Y_2}(y_2)dy_2=27/32$
 
 
 
@@ -2208,7 +2201,7 @@ Ian Dinwoodie, Robert Fountain
 ### 2017S1
 [3.E.20][]
 
-Let $\Theta$ be a real-valued random variable with density $f\Theta(\theta) = \frac1{\sqrt{2\pi}}e^{-\theta^2/2},\theta\in\mathbb R$, and let Y have
+Let $\Theta$ be a real-valued random variable with density $f_\Theta(\theta) = \frac1{\sqrt{2\pi}}e^{-\theta^2/2},\theta\in\mathbb R$, and let Y have
 conditional density $f(y|\theta) = \frac1{\sqrt{2\pi}}e^{-(y-\theta)^2/2},y\in\mathbb R$. Determine
 
 (a) the conditional density of $\Theta$ given $Y = y$, (2 pts)
@@ -2252,7 +2245,7 @@ $E[X^1]=e^{1/2}$;
 $E[X^2]=e^2$;
 $E[X^3]=e^{9/2}$
 
-$E(X-\mu)^3/\sigma^3=\frac{x^3-3x^2\mu+3x\mu^2+\mu^3}{(EX^2-E^2X)^{3/2}}=\frac{e^{9/2}-3e^{5/2}+2e^{3/2}}{(e^2-e)^{3/2}}=(e+2)(e-1)^{1/2}$
+$E\frac{X-\mu^3}{\sigma^3}=\frac{x^3-3x^2\mu+3x\mu^2+\mu^3}{(EX^2-E^2X)^{3/2}}=\frac{e^{9/2}-3e^{5/2}+2e^{3/2}}{(e^2-e)^{3/2}}=(e+2)\sqrt{e-1}$
 
 ### 2017S5
 [MLE](#MLE) [Cor](#Cor)
@@ -2261,21 +2254,19 @@ Suppose $X_1,X_2,..,X_n$ is a random sample of $N(\mu,\sigma^2)$ random variable
 
 (a) Find the expectation of the MLE for $\sigma^2$. (3 pts)
 
-$\hat\sigma^2=\frac{\sum(x_i-\mu)^2}{n}$
-
-$E[\hat\sigma^2]=\frac{E[\sum(x_i-\mu)^2]}{n}=\frac{n-1}{n}E[S^2]=\frac{n-1}{n}\sigma^2$
+$\mu$ known, $\hat\sigma^2=\frac{\sum(x_i-\mu)^2}{n}$, $E[\hat\sigma^2]=\frac{\sum E[(x_i-\mu)^2]}{n}=\sigma^2$; $\mu$ unknown
+$\hat\sigma^2=\frac{\sum(x_i-\bar x)^2}{n}$, $E[\hat\sigma^2]=\frac{E[\sum(x_i-\bar x)^2]}{n}=\frac{(n-1)E[S^2]}{n}=\frac{(n-1)\sigma^2}{n}$
 
 (b) Compute the correlation of $\bar X$ and $X_n$. (2 pts)
 
 $Var[X_n]=\sigma^2$, $Var[\bar X]=\sum Var[X_i]/n^2=\sigma^2/n$
 
-$Cov[\bar X,X_n]=Cov[\sum X_i,X_n]/n=\frac{n-1}{n}\sigma^2$
+$Cov[\bar X,X_n]=Cov[\sum X_i,X_n]/n=\frac{\sigma^2}{n}$
 
 $\rho=\frac{Cov[\bar X,X_n]}{\sqrt{Var[\bar X]Var[X_n]}}=\frac1{\sqrt{n}}$
 
-Another methods
-
-$(1-\rho^2)\sigma^2=\frac{\sigma^2}{n}$, 
+Another methods may not work
+$(1-\rho^2)\sigma^2=\frac{\sigma^2}{n}$
 
 ### 2017S6
 [2003F9][] [2011F6][]  [UMP][8.3.2]
@@ -2291,13 +2282,11 @@ Step3 $T>t_0$ is UMP test at $\alpha=P_{\theta_0}(T>t_0)=0.05$
 ### 2017S7
 [2019SA3][] [Beta-Bino]
 
-Suppose that $(P,X)$ is a pair of random variables with $P\sim Beta(1/2, 1/2)$ and then $X_{|P=p}\sim bin(n,p)$. Find the variance of X. 
+Suppose that $(P,X)$ is a pair of random variables with $P\sim Beta(\frac12,\frac12)$ and then $X_{|P=p}\sim bin(n,p)$. Find the variance of X. $n(n+1)/8$
 
-$E[P]=1/2$, $E[P^2]=3/8$, $Var[P]=1/8$
+$E[P]=\frac12$, $E[P^2]=\frac38$, $Var[P]=\frac18$
 
-$Var[X|P]=n(n+1)/8$
-
-$E[Var(X|P)]+Var[E(X|P)]=E[np(1-p)]+Var[np]=n/2-3n/8+n^2/8$
+$E[Var(X|P)]+Var[E(X|P)]=E[np(1-p)]+Var[np]=\frac{n}2-\frac{3n}8+\frac{n^2}8$
 
 ### 2017S8
 [CRLB][7.3.2]
@@ -2317,6 +2306,10 @@ Kim, Kochar
 Suppose Xenophon and Yves meet for lunch, and Xenophon arrives at time X
 uniformly from 1 to 2 P.M., and Yves arrives independently at time Y with the same distribution. Find the distribution of $|Y-X|$ and its expectation, that is, the expected waiting time of either party.
 
+When $Y>X$,$0<x<y<1$, $U=Y-X$, $V=X$, $|J|=1$, $g(u,v)=1$, $0<v<u+v<1$, $0<v<1-u$,
+$g(u)=1-u$, $0<u<1$; Same with $Y<X$;
+$E[U]=\int_0^1u(1-u)du=1/6$
+
 ### 2017FA2
 [2010SA3][] [2011S4][] [2018FA4][] [DeltaM](#DeltaM) [LimD](#LimD)
 
@@ -2325,14 +2318,18 @@ $f(x)=\lambda e^{-\lambda x}, x>0$, with $\sigma^2=1/\lambda^2$. We are thinking
 $\sqrt{n}(\bar X_n^2-1/\lambda^2)$
 Let  be a random sample from $Poisson(\mu)$. Derive the limiting distribution of $\sqrt{n}(e^{-\bar X_n}-e^{-\mu})$.
 
-MLE $1/\lambda=\bar X$
-
+MLE $1/\lambda=\bar X$;
 MLE $1/\lambda^2=\bar X^2$
 
 ### 2017FA3
-[2003F8][] [2014SA2][] [2015F2][] [Expo](#Expo) [Basu](#Basu)
+[2003F8][] [2014SA2][] [2015F2][] [Expo](#Expo)
 
-If X and Y are independent $Exp(1)$ random variables, and the density of the ratio $X/(X+Y)$. $=1\sim Beta(1,1)$
+If X and Y are independent $Exp(1)$ random variables, and the density of the ratio $X/(X+Y)$.
+
+$Exp(1)=Gamma(1,1)$, $X/(X+Y)=1\sim Beta(1,1)=Unif(0,1)$
+
+$U=X/(X+Y)$, $V=X+Y$, $0<u<1$, $0<v$, $|J|=V$, $g(u,v)=ve^{-v}$,
+$g(u)=\int_0^1ve^{-v}dv=E[V]=1$
 
 ### 2017FA4
 [median](#median)
@@ -2351,7 +2348,7 @@ $f_V(v)=\int_0^v$
 
 
 ### 2017FB1
-**[2016S2][]** 
+**[2016S2][]** [Example 6.2.22][6.2.4]
 
 Let $Y$ be $Binomial(n,p)$, with $n$ known and $p$ unknown. Among functions $u(Y)$ of $Y$,
 
@@ -2591,11 +2588,14 @@ where $\theta>-1$ is an unknown parameter.
 (d) Find the Cramer-Rao lower bound for an unbiased estimator of $\theta$.
 
 ### 2018FB3
-[UMVUE][7.3.2] [FishI][7.3.2] [perc](#perc) [7.3.14] [7.3.15]
+[perc](#perc) [Normal MSE][7.3.1] [Normal variance bound][7.3.2]
 
 Let $X_1,X_2,..,X_n$ be a random sample from $N(\mu,\sigma^2)$ distribution. Find a lower bound on the variance of any unbiased estimator of the 95th percentile of this distribution based on the Information Inequality. Also compare this bound to the variance of the uniformly minimum variance unbiased estimator.
 
 $\hat\tau=\bar x+1.645s$
+
+there is no UMVUE of $\sigma^2$. 
+$S^2$ is unbiased but not minimized. MLE $\sigma^2$ is minimized but biased. CRLB is between two of them. they are ARE.
 
 ### 2018FB4
 [2013FB5] [HypoT](#HypoT) [Min-Suff](#Min-Suff)
@@ -2606,6 +2606,9 @@ on the interval $(\theta,\theta+1)$. For testing $H_0:\theta=0$ against $H_a:\th
 1. Test 1 : Reject $H_0 if X_1>0.95$
 2. Test 2 : Reject $H_0 if X_1+X_2>c$.
 Find the value of c so that the Test 2 has the same value of Type I error probability as Test 1.
+
+$1-\alpha=P_{\theta_0}(T\le t_0)=\int_{-\infty}^{t_0}$;
+$\alpha=P(T>t_0)=\int_{t_0}^{\infty}$
 
 $\alpha=P(x_1>0.95)=P(x_1+x_2>c)$
 
@@ -2750,9 +2753,11 @@ $Eg(X)=\sum_{-\infty}^\infty g(x)f_X(x)dx$
 2.3.2 variance
 $Var[X]=E(X-EX)^2$
 
-2.3.6 moment generating function
+**Definition 2.3.6 moment generating function**
+$M_X(t)=E[e^{tx}]$ $=\int_{-\infty}^{\infty}e^{tx}f_X(x)dx$ $=\sum_{x}e^{tx}P(X=x)$
 
-
+**Theorem 2.3.7* *If X has mgf $M_X(t)$, then $EX^n=M_X^{(n)}(0)=\left.\frac{d^n}{dt^n}M_X(t)\right|_{t=0}$,
+That is, the nth moment is equal to the nth derivative of $M_X(t)$ evaluated at $t=0$
 
 ## 2.4 Differentiating Under an Integral Sign
 
@@ -2770,7 +2775,7 @@ $Y~Bino$,$X~NBin(r,p)$,$F_x(r-1)=1-F_y(n-r)$
 
 Negative Bino(r,p): 
 
-n trials until r(successes)  $P(X=n)={{n-1}\choose{r-1}}p^r(1-p)^{n-r}$;$P(X\le n)=\sum_{i=r}^n{{i-1}\choose{r-1}}p^r(1-p)^{i-r}$
+n trials until r(successes)  $P(X=n)={n-1\choose r-1}p^r(1-p)^{n-r}$;$P(X\le n)=\sum_{i=r}^n{{i-1}\choose{r-1}}p^r(1-p)^{i-r}$
 
 x(failures) before r(successes) $P(X=x)={{x+r-1}\choose{x}}p^rq^{x}$;$P(X\le x)=\sum_{i=0}^x{{i+r-1}\choose{i}}p^rq^{i}$; $M_X(t)=(\frac{p}{1-qe^t})^r,t<\ln q$$
 
@@ -2818,12 +2823,20 @@ $B(\alpha,\beta)=\frac{Gamma(\alpha)+Gamma(\beta)}{\Gamma(\alpha+\beta)}$, $EX^n
 Standard Power distribution  
 
 ## 3.4 Exponential Families
+$f(x|\theta)=h(x)c(\theta)e^{\sum^k_{i=1}W(\theta_i)t_i(x)}$
+
+the continuous families: normal, gamma, and beta;
+the discrete families-binomial, Poisson, and negative binomial.
+
 ## 3.5 Location and Scale Families
 ## 3.6 Inequalities and Identities
 ### 3.6.1 
 Probability Inequalities {#Cheb}
 
-Chebychev inequality
+**Theorem 3.6.1 (Chebychev's Inequality)** $P(g(X)\ge r)\le\frac{Eg(X)}{r}$,
+X be a r.v. g(x) be a nonnegative fn. $\forall r>0$
+
+**Example 3.6.2 (Illustrating Chebychev)** $P(|x-\mu|<t\sigma)\ge1-\frac1{t^2}$
 
 ### 3.6.2 Identities
  
@@ -3391,7 +3404,8 @@ $Y=\frac{\sum_{j=1}^a\ln U_j}{\sum_{j=1}^{a+b}\ln U_j}\sim Beta(a,b)$
 
 ## 6.2 The Sufficiency Principle
 
-### 6.2.1 Sufficient Statistics {#suff} {#Facto} 
+### 6.2.1 
+Sufficient Statistics {#suff} {#Facto} 
 
 **Definition 6.2.1** A satistic $T(\mathbf{X})$ is a sufficient statistic for $\theta$ if the conditional distribution of the sample $\mathbf{X}$ given the value of $T(\mathbf{X})$ does not depend on $\theta$.
 
@@ -3438,30 +3452,35 @@ Example 6.2.18 (Location family ancillary statistic)
 
 $R=X_{(n)}-X_{(1)}$ is an ancillary statistic.
 
-Example 6.2.19 (Scale family ancillary statistic)
+**Example 6.2.19 (Scale family ancillary statistic)**
+the (n-1) values $X_1/X_n, . . . , X_{n-1}/X_n$ is an ancillary statistic.
 
-### 6.2.4 Sufficient, Ancillary, and Complete Statistics {#comp} {#Basu} 
+### 6.2.4 
+Sufficient, Ancillary, and Complete Statistics {#comp} {#Basu} 
 
-**Definition 6.2.21** the (n-1) values $X_1/X_n, . . . , X_{n-1}/X_n$ is an ancillary statistic.
-
+**Definition 6.2.21** 
 Let $f(x|\theta)$ be a family of pdfs or pmfs for a statistic $T(\vec X)$. The family of probability distributions is called complete if $E_\theta[g(T)]=0, \forall\theta$ implies $P_\theta(g(T)=0)=1$ for all $\theta$. Equivalently, $T(\vec X)$ is called a _complete statistic_.
 
 **Example 6.2.22 (Binomial complete sufficient statistic)**
+T is a complete statistic.
 
 **Example 6.2.23 (Uniform complete sufficient statistic)**
+$T(X)=\max_i X_i$ is a sufficient statistic. T is a complete statistic.
 
 **Theorem 6.2.24 (Basu's Theorem)**
-
 If $T(\mathbf{X})$ is a complete and minimal sufficient statistic, then $T(\mathbf{X})$ is independent of every ancillary statistic.
 
 **Theorem 6.2.25 (Complete statistics in the exponential family)**
+Let $X_1,..,X_n$ be iid observations from an exponential family with pdf or pmf of the form
+$f(x|\vec\theta)=h(x)c(\vec \theta)e^{\sum^k_{j=1}W(\vec \theta_j)t_j(x)}$,
+where $\vec\theta=\theta_1,..\theta_k$. Then the statistic $T(X)=(\sum_{i=1}^nt_1(X_i),..,\sum_{i=1}^nt_k(X_i))$ is complete as long as the parameter space $\Theta$ contains an open set in in $\Bbb R^k$.
 
 **Example 6.2.26 (Using Basu's Theorem-I)**
 
 **Example 6.2.27 (Using Basu's Theorem-II)**
 
-**Theorem 6.2.28** If a minimal sufficient statistic exists, then any complete statistic
-is also a minimal sufficient statistic.
+**Theorem 6.2.28** 
+If a minimal sufficient statistic exists, then any complete statistic is also a minimal sufficient statistic.
 
 ## 6.3 The Likelihood Principle
 
@@ -3608,16 +3627,24 @@ $E\bar X=\mu,\quad ES^2=\sigma^2, \forall\mu \text{ and } \sigma^2$
 
 $E(\bar X-\mu)^2=Var\bar X=\frac{\sigma^2}{n},\quad E(S^2-\sigma^2)^2=VarS^2=\frac{2\sigma^4}{n-1}$
 
-**Example 7.3.4 (Continuation of Example 7.3.3)** An alternative estimator for $\sigma^2$ is the maximum likelihood estimator  $\hat\sigma^2=\frac1n\sum_{i=1}^n(X_i-\bar X)^2=\frac{n-1}nS^2$. It is straightforward to calculate
+**Example 7.3.4 (Continuation of Example 7.3.3)** An alternative estimator for $\sigma^2$ is the maximum likelihood estimator
+
+$\hat\sigma^2=\frac1n\sum_{i=1}^n(X_i-\bar X)^2=\frac{n-1}nS^2$. It is straightforward to calculate
+
 $E\hat\sigma^2=E\left(\frac{n-1}nS^2\right)=\frac{n-1}n\sigma^2$
-so $\sigma^2$ is a biased estimator of $\hat\sigma^2$. The variance of $\hat\sigma^2$ can also be calculated as
+so $\sigma^2$ is a biased estimator of $\hat\sigma^2$. 
+
+The variance of $\hat\sigma^2$ can also be calculated as
 $Var\hat\sigma^2=Var\left(\frac{n-1}nS^2\right)=\left(\frac{n-1}n\right)^2VarS^2=\frac{2(n-1)}{n^2}\sigma^4$
+
 and, hence, its MSE is given by
 $E(\hat\sigma^2-\sigma^2)^2=\frac{2(n-1)}{n^2}\sigma^4+\left(\frac{n-1}n\sigma^2-\sigma^2\right)^2=\frac{2n-1}{n^2}\sigma^4$
+
 We thus have
 $E(\hat\sigma^2-\sigma^2)^2=\frac{2n-1}{n^2}\sigma^4<\frac{2\sigma^4}{n-1}=E(S^2-\sigma^2)^2$
+showing that $\hat\sigma^2$ has smaller MSE than $S^2$
 
-showing that $\hat\sigma^2$ has smaller MSE than $S^2$ Thus, by trading off variance for bias, the MSE is improved.
+Thus, by trading off variance for bias, the MSE is improved.
 
 **Example 7.3.5 (MSE of binomial Bayes estimator)**
  
@@ -3633,6 +3660,9 @@ Best Unbiased Estimators {#UMVUE} {#CRLB}  {#FishI}
 An estimator $W^*$ is a best unbiased estimator of $\tau(\theta)$ if it satisfies $E_\theta{W^*}=\tau(\theta)$ for all $\theta$ and, for any other estimator $W$ with $E_\theta{W}=\tau(\theta)$, we have Vare $Var_\theta{W^*}<Var_\theta{W}$ for all $\theta$. $W^*$ is also called a _uniform minimum variance unbiased estimator_ (UMVUE) of $\tau(\theta)$.
 
 **Example 7.3.8 (Poisson unbiased estimation)**
+$E_{\lambda}\bar X=\lambda=E_{\lambda}S^2, \forall\lambda$ are both unbiased estimator of $\lambda$
+
+$Var_{\lambda}\bar X\le Var_{\lambda}S^2, \forall\lambda$. $\bar X$ is better
 
 **Theorem 7.3.9 (Cramer-Rao Inequality)**
 Let $X_1,..,X_n$ be a sample with pdf $f(\vec x|\theta)$, and let $W(\vec X)=W(X_1,..,X_n)$ be any estimator satisfying
@@ -3653,18 +3683,37 @@ $\frac{d}{d\theta}E_\theta\left[\frac{\partial}{\partial\theta}\ln f(X|\theta)\r
 $E_\theta\left[(\frac{\partial}{\partial\theta}\ln f(X|\theta))^2\right]=-E_\theta\left[\frac{\partial^2}{\partial\theta^2}\ln f(X|\theta)\right]$
 
 **Example 7.3.12 ( Conclusion of Example 7.3.8)**
+$Var_{\lambda}W\ge\frac\lambda{n}=Var_{\lambda}\bar X$. $\bar X$ is a best unbiased estimator of $\lambda$
 
 **Example 7.3.13 (Unbiased estimator for the scale uniform)**
+$f(x|\theta)=\frac1\theta$, $I_{\theta}=\frac1{\theta^2}$, CRLB $Var_{\theta}W\ge\frac{\theta^2}{n}$
+
+The sufficient statistic $Y=\max(X_1,..,X_n)$. $f_Y(y|\theta)=\frac{n}{\theta^n}y^{n-1}$
+
+$E_{\theta}Y=\int_0^\theta\frac{ny^{n}}{\theta^n}dy=\frac{n}{n+1}\theta$, $\frac{n+1}{n}Y$ is an unbiased estimator of $\theta$
+
+$Var_{\theta}\frac{n+1}{n}Y=\frac{\theta^2}{n(n+2)}<\frac{\theta^2}{n}$
+
+This indicates that the CRLB is not applicable to this pdf.
 
 **Example 7.3.14 (Normal variance bound)**
+$Var[W|\mu,\sigma^2]\ge\frac{2\sigma^4}{n}$
 
-**Corollary 7.3.15 (Attainment)**
+Example 7.3.3 shows $Var[S^2|\mu,\sigma^2]\ge\frac{2\sigma^4}{n-1}$. $S^2$ does not attain the CRLB
+
+**Corollary 7.3.15 (Attainment)** Let $X_1,..,X_n$ be iid $f(x|\theta)$, where $f(x|\theta)$ satisfies the conditions of the Cramer-Rao Theorem. Let $L(\theta|x)=\prod f(x_i|\theta)$ denote the likelihood function. If $W(X)=W(X_1,..,X_n)$ is any unbiased estimator of $\tau(\theta)$, then $W(X)$ attains the Cramer-Rao Lower Bound if and only if
+$a(\theta)[W(x)-\tau(\theta)]=\frac{\partial}{\partial\theta}\ln L(\theta|x)$
+for some function $a(\theta)$.
 
 **Example 7.3.16 (Continuation of Example 7.3.14)**
+$\frac{\partial}{\partial\sigma^2}\ln L(\mu,\sigma^2|x)=\frac{n}{2\sigma^4}[\frac{\sum(x_i-\mu)^2}n-\sigma^2]$
 
-### 7.3.3 Sufficiency and Unbiasedness {#Rao-Bla} {#Lehm-Sche} 
+Thus, taking $a(\sigma^2)=n/(2\sigma^4)$ shows that the best unbiased estimator of $\sigma^2$ is $\sum(x_i-\mu)^2/n$, which is calculable only if $\mu$ is known. If $\mu$ is unknown, the bound cannot be attained.
 
-**Theorem 7.3. 17 (Rao-Blackwell)**
+### 7.3.3 
+Sufficiency and Unbiasedness {#Rao-Bla} {#Lehm-Sche} 
+
+**Theorem 7.3.17 (Rao-Blackwell)**
 Let $W$ be any unbiased estimator of $\tau(\theta)$, and let $T$ be a sufficient statistic for $\theta$. Define $\phi(T)=E[W|T]$. Then $E_{\theta}\phi(T)=\tau(\theta)$ and $Var_{\theta}\phi(T)\le Var_{\theta}(W)$ for all $\theta$; that is, $\phi(T)$ is a uniformly better unbiased estimator of $\tau(\theta)$.
  
 **Theorem 7.3.23 Lehmann-Scheffe**
@@ -3844,6 +3893,30 @@ Consistency {#consi-Seq-E} {#consi} {#consi-MLE}
 
 **Theorem 10.1.12 (Asymptotic efficiency of MLEs)**
 
+
+## 10.3 Hypothesis Testing
+### 10.3.1 Asymptotic Distribution of LRTs
+
+**Theorem 10.3.1 (Asymptotic distribution of the LRT--simple H0)**
+For testing $H_0: \theta=\theta_0$ versus $H_1: \theta\neq\theta_0$, suppose $X_1,..,X_n$ are iid $l(xIO)$. $\hat\theta$ is the MLE of $\theta$, and $f(x|\theta)$ satisfies the regularity conditions in Miscellanea 10.6.2. . Then under $H_0$, as $n\to\infty$,
+$-2\ln\lambda(x)\overset{D}\to\chi^2_1$
+
+**Example 10.3.2 (Poisson LRT)**
+
+**Theorem 10.3.3 ** Let $X_1,..,X_n$ be a random sample from a pdf or pmf $f(x|\theta)$. Under the regularity conditions in Miscellanea 10.6.2, if $\theta\in\Theta_0$, then the distribution of the statistic $-2\ln X$ converges to a chi squared distribution as the sample size $n\to\infty$. The degrees of freedom of the limiting distribution is the difference between the number of free parameters specified by $\theta\in\Theta_0$ and the number of free parameters specified by $\theta\in\Theta$.
+
+$H_0$ is rejected if and only if $-2\ln X\ge\chi^2_{\nu,\alpha}$
+
+$\lim\limits_{n\to\infty}P_{\theta}(\text{reject} H_0)=\alpha$ for each $\theta\in\Theta_0$
+
+Example 10.3.4 (Multinomial LRT)
+
+## 10.6
+
+### 10.6.2 Suitable Regularity Conditions
+
+$\sqrt{n}(\hat\theta_{MLE}-\theta)\overset{D}\to N(0,\frac1{I_\theta})$
+
 ###
 
 $(\frac{u}v)'=\frac{u'v-uv'}{v^2}$;
@@ -3902,7 +3975,7 @@ $\sum_{k=0}^n c^k=\frac{c^{n+1}-1}{c-1}$  & $\sum_{k=0}^n \binom{n}{k}a^{n-k}b^k
 |$Unif(a,b)$|$\frac{a+b}{2}$; ;$\frac{(b-a)^2}{12}$|$\frac{1}{b-a}$,$x\in(a,b)$;$\frac{x-a}{b-a}$|$\min{x_{(1)},x_{(n)}}$;R ancillary|$\frac{e^{tb}-e^{ta}}{t(b-a)}$|
 |$Norm(\mu,\sigma^2)$|$\mu$;$\mu^2+\sigma^2$;$\sigma^2$|$\frac{1}{\sigma\sqrt{2\pi}} e^{-\frac{(x-\mu)^2}{2\sigma^2}}$||$e^{\mu t +\frac{\sigma^2t^2}2}$; $(\mu+\sigma^2t)M(t)$;$[(\mu+\sigma^2t)^2+\sigma^2]M(t)$|
 |$SNorm(0,1)$|$0$;$1$;$1$|$\frac{1}{\sqrt{2\pi}}e^{-\frac{x^2}2}$||$e^{\frac{t^2}2}$|
-|$LNorm(\mu,\sigma^2)$|$e^{\mu+\frac{\sigma^2}2}$;$e^{2\mu+2\sigma^2}$;$E^2X(e^{\sigma^2}-1)$|$\frac{1}{x\sigma \sqrt{2\pi}}e^{\frac{-(\ln x-\mu)^2}{2\sigma^2}}$|$\hat\mu=\frac1n\sum\ln x_i$,$\hat\sigma^2=\frac1n\sum\ln(x_i-\hat\mu)^2$|$e^{n\mu+n^2\sigma^2/2}$|
+|$LNorm(\mu,\sigma^2)$|$e^{\mu+\frac{\sigma^2}2}$;$e^{2\mu+2\sigma^2}$;$E^2X(e^{\sigma^2}-1)$|$\frac{1}{x\sigma \sqrt{2\pi}}e^{\frac{-(\ln x-\mu)^2}{2\sigma^2}}$|$\hat\mu=\frac1n\sum\ln x_i$,$\hat\sigma^2=\frac1n\sum\ln(x_i-\hat\mu)^2$|$EX^n=e^{n\mu+n^2\sigma^2/2}$|
 |$Cauchy(\theta,\sigma^2)$||$\frac{1}{\pi\sigma}\frac1{1+(\frac{x-\theta}{\sigma})^2}$|||
 |$DExpo(\mu,\sigma^2)$|$\mu$;$\mu^2+2\sigma^2$;$2\sigma^2$|$\frac{1}{2\sigma} e^{-|\frac{x-\mu}{\sigma}|}$|$\hat\mu=median$,$\hat\sigma=\frac1n\sum|x_i|$|$\frac{e^{\mu t}}{1-\sigma^2t^2}$|
 |$Expo(\beta)$|$\beta$; ;$\beta^2$|$\frac1{\beta} e^{-\frac{x}\beta},x \in (0,\infty)$;$1-e^{-\lambda x}$|$1/\bar X$;$\sum x_i$;|$\frac{\lambda}{\lambda-t},t<\lambda$,$\frac{1}{1-\beta t}$;$\beta(1-\beta t)^{-2}$;$2\beta^2(1-\beta t)^{-3}$|
